src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-ofT-dhP0.5-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nopen floating: true\ndefault window height: P0.5\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 0 × 360, bounds: 1280 × 720, states: []
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
